--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,9 @@
     </header>
     <body>
         <div id="container">
+            <div id="cabecera">
+                <p>Aqui inicia la cabecera</p>
+            </div>
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
                 <p>Este es el parrafo de inicio</p>
