--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,10 @@
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
                 <p>Este es el parrafo de inicio</p>
+                <p>
+                    Los blogs son la mejor forma de compartir
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam nihil suscipit earum ea dolore, molestiae molestias fugit provident possimus esse nemo qui veniam aspernatur vitae reiciendis error odio delectus debitis?
+                </p>
                 
         </div>
     </div>
