--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Hyperblog <span id="tagline">Tu blog de confianza</span> 
+                Hyperblog <span id="tagline">Tu blog maestro</span> 
             </div>
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
@@ -21,6 +21,7 @@
                     Los blogs son la mejor forma de compartir
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam nihil suscipit earum ea dolore, molestiae molestias fugit provident possimus esse nemo qui veniam aspernatur vitae reiciendis error odio delectus debitis?
                 </p>
+                <p>Suscribete y dale like</p>
                 
         </div>
     </div>
