Color de fondo, logo nuevo y mejor color de header

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,12 +7,13 @@
     <title>Bienvenido a Hyperblog 2.0</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
-    <header>
-    </header>
+
     <body>
         <div id="container">
             <div id="cabecera">
-                Hyperblog <span id="tagline">Tu blog de cabecera</span> 
+                <img id="logo" src="imagenes/dragon.webp" alt="">
+                Hyperblog 
+                <span id="tagline">Tu blog de cabecera</span> 
             </div>
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
