--- a/blogpost.html
+++ b/blogpost.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenido a Hyperblog 2.0</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
     <header>
     </header>
@@ -21,8 +21,11 @@
                     Los blogs son la mejor forma de compartir
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam nihil suscipit earum ea dolore, molestiae molestias fugit provident possimus esse nemo qui veniam aspernatur vitae reiciendis error odio delectus debitis?
                 </p>
-                <p>Suscribete y dale like</p>
-                
+                <p>Suscribete y dale like</p>                
+        </div>
+        <div id="footer">
+            Hecho con amor en Platzi💚
+
         </div>
     </div>
     
