--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                <img id="logo" src="imagenes/dragon.webp" alt="">
+                <img id="logo" src="./imagenes/dragon.webp" alt="">
                 Hyperblog 
                 <span id="tagline">Tu blog de cabecera</span> 
             </div>
