--- a/blogpost.html
+++ b/blogpost.html
@@ -21,6 +21,7 @@
                 <p>
                     Los blogs son la mejor forma de compartir
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam nihil suscipit earum ea dolore, molestiae molestias fugit provident possimus esse nemo qui veniam aspernatur vitae reiciendis error odio delectus debitis?
+                    Todo quedo perfeee
                 </p>
                 <p>Suscribete y dale like</p>                
         </div>
