Cambio a entidades HTML en vez de tildes

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,10 +16,10 @@
                 <span id="tagline">Tu blog de cabecera</span> 
             </div>
             <div id="post">
-                <h1>Este es el titulo atractivo e interesante del post</h1>
-                <p>Este es el parrafo de inicio</p>
+                <h1>Este es el t&iacute;tulo atractivo e interesante del post</h1>
+                <p>Este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
                 <p>
-                    Los blogs son la mejor forma de compartir
+                    Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho m&aacute;s que ir a conferencias o salir en YouTube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres... por ahora.
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam nihil suscipit earum ea dolore, molestiae molestias fugit provident possimus esse nemo qui veniam aspernatur vitae reiciendis error odio delectus debitis?
                     Todo quedo perfeee
                 </p>
