--- a/blogpost.html
+++ b/blogpost.html
@@ -23,7 +23,8 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam nihil suscipit earum ea dolore, molestiae molestias fugit provident possimus esse nemo qui veniam aspernatur vitae reiciendis error odio delectus debitis?
                     Todo quedo perfeee
                 </p>
-                <p>Suscribete y dale like</p>                
+                <p>Suscribete y dale like</p>
+                <p>Este es un mensaje aportado por un contribuyente desde GitHub</p>                
         </div>
         <div id="footer">
             Hecho con amor en Platzi💚
